# Stock_Simulation_System

./: .gitignore  README.md
Analysis/: main(xtp).ipynb  main.ipynb
Analysis/public/: log(without threadpool).txt  log.txt
benchmark/: output_log_thread_1.txt  output_log_thread_4.txt
benchmark/benchmark_simulation/: Cargo.toml
init/: init.sh
init/data_service/: compose.yaml
init/setup/src/: main.rs
setup/: Cargo.toml
setup/src/: main.rs
stock_side/: Dockerfile  README.Docker.md  compose.yaml
stock_side/common/: Cargo.toml
stock_side/common/src/: models.rs
stock_side/communication_layer/: Cargo.toml
stock_side/communication_layer/src/: consumer.rs  producer.rs
stock_side/main/: Cargo.toml
stock_side/main/log/: log.txt
stock_side/main/log/algorithm_log/: 00.05.23 20-12-24.txt  21.18.37 10-02-25.txt
stock_side/main/src/: main.rs
stock_side/market_data_generator/: Cargo.toml
stock_side/market_data_generator/src/: algorithm.rs  lib.rs  price_updater.rs
stock_side/order_management_system/: Cargo.toml  Dockerfile
stock_side/order_management_system/src/: lib.rs  order_book_manager.rs
trading_side/mimic_produce/: Cargo.toml
trading_side/mimic_produce/src/: main.rs  models.rs  producer.rs
trading_side/mimic_whole/: Cargo.toml
trading_side/mimic_whole/public/: index.html  script.js  style.css
trading_side/mimic_whole/src/: consumer.rs  main.rs  models.rs  producer.rs
