[package]
name = "benchmark_simulation"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["--cfg", "tokio_unstable"]

[dependencies]
console-subscriber = "0.4.1"
rand = "0.8.5"
sysinfo = "0.33.0"
tokio = { version = "1.41.0", features = ["full", "tracing"] }
memuse = "0.2.2"
perf_monitor = "0.2"
peak_alloc = "0.2.1"
chrono = "0.4.39"
redis = { version= "0.27.5", features = ["tokio-comp"]}
serde_json = "1.0.133"
bma-benchmark = "0.0.24"
