[package]
name = "market_data_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
common= { path = "../common" }
redis = { version= "0.27.5", features = ["tokio-comp"]}
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
chrono = "0.4.38"
once_cell = "1.20.2"
rand = "0.8.5"
bb8 = "0.8.6"
bb8-redis = "0.17.0"