[package]
name = "mimic_produce"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.36.2", features = ["tokio"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
rand = "0.8.5"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.38"
redis = "0.27.5"
