[package]
name = "mimic_whole"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.36.2", features = ["tokio"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-stream = "0.1.16"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
warp = "0.3.7"
futures = "0.3"
uuid = { version = "1.11.0", features = ["v4"] }
rand = "0.8.5"
chrono = "0.4.38"
redis = "0.27.5"
